# NotesApp

./: CMakeLists.txt
include/: app.h  canvas.h  ecs.h  input.h  renderer.h  ui.h
src/: app.cpp  canvas.cpp  ecs.cpp  input.cpp  main.cpp  renderer.cpp  ui.cpp
systems/: nodeInteraction.cpp  nodeInteraction.h  textInput.cpp  textInput.h
